--- a/BookCenter/BookCenter/Views/InfoView.xaml
+++ b/BookCenter/BookCenter/Views/InfoView.xaml
@@ -5,9 +5,25 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookCenter.Views"
              mc:Ignorable="d" 
-             Background="Green"
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+            <Label 
+                Grid.Row="0"
+                Content="{Binding SelectedBook.Title}"/>
+
+        <Button
+            Grid.Row="1"
+            Command="{Binding OrderCommand}"
+            Content="Order Ticket"/>
+        <Button 
+                Grid.Row="2"
+                Command="{Binding GoBackCommand}">Go Back</Button> 
     </Grid>
 </UserControl>
