--- a/BookCenter/BookCenter/Views/SearchView.xaml
+++ b/BookCenter/BookCenter/Views/SearchView.xaml
@@ -7,6 +7,7 @@
              xmlns:local="clr-namespace:BookCenter.Views"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
+             Name="Search"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
@@ -46,7 +47,16 @@
             </TextBox>
         </DockPanel>
 
-        <ListBox Grid.Row="1" ItemsSource="{Binding SearchResults}"/>
+        <ListBox Grid.Row="1" SelectedItem="{Binding SelectedItem}" ItemsSource="{Binding SearchResults}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <Label Content="{Binding TitleSearch}"/>
+                        <Button Command="{Binding ElementName=Search, Path=DataContext.MoreInfoCommand}" Content="MoreInfo"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
             
     </Grid>
 </UserControl>
